/**
 * MainLayout 组件契约测试 (TDD)
 *
 * 契约定义:
 * - MainLayout 应作为主布局容器
 * - 应支持顶部 Header 区域
 * - 应支持底部 Footer 区域
 * - 应支持左侧 Sidebar 区域（可选）
 * - 应支持主内容区域
 * - 应支持响应式布局
 * - 应支持自定义样式和类名
 *
 * 注意: 此测试为契约测试，组件实现尚不存在
 * 预期: 这些测试在实现前会失败 (RED)
 */

import React from 'react'
import { render, screen } from '@testing-library/react'
import { MainLayout } from '../MainLayout'

describe('MainLayout Component (Contract)', () => {
  describe('Rendering Contract', () => {
    it('should render main layout container', () => {
      const { container } = render(<MainLayout />)

      const layout = container.querySelector('.main-layout')
      expect(layout).toBeInTheDocument()
    })

    it('should render header area when provided', () => {
      const header = <header data-testid="test-header">Header</header>

      render(<MainLayout header={header} />)

      expect(screen.getByTestId('test-header')).toBeInTheDocument()
    })

    it('should render footer area when provided', () => {
      const footer = <footer data-testid="test-footer">Footer</footer>

      render(<MainLayout footer={footer} />)

      expect(screen.getByTestId('test-footer')).toBeInTheDocument()
    })

    it('should render sidebar when provided', () => {
      const sidebar = <aside data-testid="test-sidebar">Sidebar</aside>

      render(<MainLayout sidebar={sidebar} />)

      expect(screen.getByTestId('test-sidebar')).toBeInTheDocument()
    })

    it('should render main content area', () => {
      const content = <main data-testid="test-content">Main Content</main>

      render(<MainLayout>{content}</MainLayout>)

      expect(screen.getByTestId('test-content')).toBeInTheDocument()
    })

    it('should render children in main content area', () => {
      render(
        <MainLayout>
          <div>Child Content</div>
        </MainLayout>
      )

      expect(screen.getByText('Child Content')).toBeInTheDocument()
    })
  })

  describe('Structure Contract', () => {
    it('should have correct DOM structure with all regions', () => {
      const header = <header>Header</header>
      const footer = <footer>Footer</footer>
      const sidebar = <div>Sidebar</div>
      const { container } = render(
        <MainLayout header={header} footer={footer} sidebar={sidebar}>
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout?.children.length).toBeGreaterThanOrEqual(3)
    })

    it('should render header at the top', () => {
      const header = <div data-testid="header">Header</div>
      const footer = <div data-testid="footer">Footer</div>
      const { container } = render(
        <MainLayout header={header} footer={footer}>
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout?.firstChild).toHaveClass('main-layout-header')
      expect(screen.getByTestId('header')).toBeInTheDocument()
    })

    it('should render footer at the bottom', () => {
      const header = <div data-testid="header">Header</div>
      const footer = <div data-testid="footer">Footer</div>
      const { container } = render(
        <MainLayout header={header} footer={footer}>
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout?.lastChild).toHaveClass('main-layout-footer')
      expect(screen.getByTestId('footer')).toBeInTheDocument()
    })

    it('should render sidebar before main content', () => {
      const sidebar = <div data-testid="sidebar">Sidebar</div>
      const content = <div data-testid="content">Content</div>
      const { container } = render(
        <MainLayout sidebar={sidebar}>
          {content}
        </MainLayout>
      )

      // Check that sidebar element exists
      expect(screen.getByTestId('sidebar')).toBeInTheDocument()
      // Check that content element exists
      expect(screen.getByTestId('content')).toBeInTheDocument()

      // Check DOM structure: sidebar should come before content in main-layout-body
      const body = container.querySelector('.main-layout-body')
      expect(body).toBeInTheDocument()

      const sidebarElement = body?.querySelector('.main-layout-sidebar')
      const contentElement = body?.querySelector('.main-layout-content')

      expect(sidebarElement?.previousSibling).toBeNull()
      expect(contentElement?.nextSibling).toBeNull()
    })
  })

  describe('Layout Variants Contract', () => {
    it('should support default layout without sidebar', () => {
      const { container } = render(
        <MainLayout>
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout).toHaveClass('layout-default')
    })

    it('should support sidebar layout variant', () => {
      const sidebar = <aside>Sidebar</aside>
      const { container } = render(
        <MainLayout sidebar={sidebar}>
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout).toHaveClass('layout-with-sidebar')
    })

    it('should support compact layout variant', () => {
      const { container } = render(
        <MainLayout variant="compact">
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout).toHaveClass('layout-compact')
    })

    it('should support full-width layout variant', () => {
      const { container } = render(
        <MainLayout variant="full-width">
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout).toHaveClass('layout-full-width')
    })

    it('should default to default variant', () => {
      const { container } = render(
        <MainLayout>
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout).toHaveClass('layout-default')
    })
  })

  describe('Sidebar Position Contract', () => {
    it('should support left sidebar position', () => {
      const sidebar = <aside>Sidebar</aside>
      const { container } = render(
        <MainLayout sidebar={sidebar} sidebarPosition="left">
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout).toHaveClass('sidebar-left')
    })

    it('should support right sidebar position', () => {
      const sidebar = <aside>Sidebar</aside>
      const { container } = render(
        <MainLayout sidebar={sidebar} sidebarPosition="right">
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout).toHaveClass('sidebar-right')
    })

    it('should default to left sidebar position', () => {
      const sidebar = <aside>Sidebar</aside>
      const { container } = render(
        <MainLayout sidebar={sidebar}>
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout).toHaveClass('sidebar-left')
    })
  })

  describe('Responsive Behavior Contract', () => {
    it('should have responsive classes', () => {
      const { container } = render(
        <MainLayout>
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout).toHaveClass('responsive')
    })

    it('should accept breakpoint prop for custom responsiveness', () => {
      const sidebar = <aside>Sidebar</aside>
      const { container } = render(
        <MainLayout sidebar={sidebar} sidebarBreakpoint="lg">
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout).toHaveClass('sidebar-breakpoint-lg')
    })

    it('should hide sidebar on mobile by default', () => {
      const sidebar = <aside>Sidebar</aside>
      const { container } = render(
        <MainLayout sidebar={sidebar}>
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout).toHaveClass('sidebar-hide-mobile')
    })
  })

  describe('Customization Contract', () => {
    it('should accept custom className', () => {
      const { container } = render(
        <MainLayout className="custom-layout">
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout).toHaveClass('custom-layout')
    })

    it('should accept custom style prop', () => {
      const { container } = render(
        <MainLayout style={{ backgroundColor: 'red' }}>
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout).toHaveStyle({ backgroundColor: 'red' })
    })

    it('should accept custom id prop', () => {
      const { container } = render(
        <MainLayout id="custom-id">
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout).toHaveAttribute('id', 'custom-id')
    })

    it('should forward additional HTML attributes', () => {
      const { container } = render(
        <MainLayout data-custom="value" role="main-wrapper">
          <main>Content</main>
        </MainLayout>
      )

      const layout = container.querySelector('.main-layout')
      expect(layout).toHaveAttribute('data-custom', 'value')
      expect(layout).toHaveAttribute('role', 'main-wrapper')
    })
  })

  describe('Content Wrapping Contract', () => {
    it('should render multiple children', () => {
      render(
        <MainLayout>
          <div data-testid="child1">Child 1</div>
          <div data-testid="child2">Child 2</div>
          <div data-testid="child3">Child 3</div>
        </MainLayout>
      )

      expect(screen.getByTestId('child1')).toBeInTheDocument()
      expect(screen.getByTestId('child2')).toBeInTheDocument()
      expect(screen.getByTestId('child3')).toBeInTheDocument()
    })

    it('should render nested content', () => {
      render(
        <MainLayout>
          <div>
            <span data-testid="nested">Nested Content</span>
          </div>
        </MainLayout>
      )

      expect(screen.getByTestId('nested')).toBeInTheDocument()
    })

    it('should render null children gracefully', () => {
      const { container } = render(
        <MainLayout>
          {null}
          <div>Valid Child</div>
          {null}
        </MainLayout>
      )

      expect(screen.getByText('Valid Child')).toBeInTheDocument()
    })
  })

  describe('Accessibility Contract', () => {
    it('should have landmark roles', () => {
      const header = <div role="banner">Header</div>
      const footer = <div role="contentinfo">Footer</div>
      const sidebar = <div>Sidebar</div>

      render(
        <MainLayout header={header} footer={footer} sidebar={sidebar}>
          <div>Content</div>
        </MainLayout>
      )

      expect(screen.getByRole('banner')).toBeInTheDocument() // header
      expect(screen.getByRole('contentinfo')).toBeInTheDocument() // footer
      expect(screen.getByRole('complementary')).toBeInTheDocument() // sidebar (from MainLayout's aside)
      expect(screen.getByRole('main')).toBeInTheDocument() // main (from MainLayout's main)
    })

    it('should accept aria labels for regions', () => {
      const sidebar = <div aria-label="Sidebar navigation">Sidebar</div>

      render(
        <MainLayout sidebar={sidebar}>
          <main>Content</main>
        </MainLayout>
      )

      // MainLayout wraps sidebar in <aside>, which has complementary role
      expect(screen.getByRole('complementary')).toBeInTheDocument()
    })
  })

  describe('Edge Cases Contract', () => {
    it('should render with no children', () => {
      const { container } = render(<MainLayout />)

      const layout = container.querySelector('.main-layout')
      expect(layout).toBeInTheDocument()
    })

    it('should render with only header', () => {
      const header = <div role="banner">Header</div>

      render(<MainLayout header={header} />)

      expect(screen.getByRole('banner')).toBeInTheDocument()
    })

    it('should render with only footer', () => {
      const footer = <footer>Footer</footer>

      render(<MainLayout footer={footer} />)

      expect(screen.getByRole('contentinfo')).toBeInTheDocument()
    })

    it('should render with empty children', () => {
      render(
        <MainLayout>
          <></>
        </MainLayout>
      )

      const layout = screen.getByRole('main') || document.querySelector('.main-layout')
      expect(layout).toBeInTheDocument()
    })
  })

  describe('Snapshot Contract', () => {
    it('should match snapshot with all regions', () => {
      const header = <header>Header</header>
      const footer = <footer>Footer</footer>
      const sidebar = <aside>Sidebar</aside>

      const { container } = render(
        <MainLayout header={header} footer={footer} sidebar={sidebar}>
          <main>Content</main>
        </MainLayout>
      )

      expect(container.firstChild).toMatchSnapshot()
    })

    it('should match snapshot with only content', () => {
      const { container } = render(
        <MainLayout>
          <main>Content</main>
        </MainLayout>
      )

      expect(container.firstChild).toMatchSnapshot()
    })

    it('should match snapshot with compact variant', () => {
      const { container } = render(
        <MainLayout variant="compact">
          <main>Content</main>
        </MainLayout>
      )

      expect(container.firstChild).toMatchSnapshot()
    })

    it('should match snapshot with right sidebar', () => {
      const sidebar = <aside>Sidebar</aside>
      const { container } = render(
        <MainLayout sidebar={sidebar} sidebarPosition="right">
          <main>Content</main>
        </MainLayout>
      )

      expect(container.firstChild).toMatchSnapshot()
    })
  })
})
